# viber

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  plans.md  pyproject.toml
data/dbt/: dbt_project.yml  profiles.yml
data/dbt/models/: example.sql  fabric_lakehouse.sql
docs/: README.md  agentic-coding.md
docs/adr/: 0000-template.md
docs/playbooks/: dbt.md  oncall.md
models/: schema.yml
models/marts/: user_counts.sql
models/staging/: stg_users.sql
scripts/: bootstrap.sh  export_lakehouse_parquet.py
seeds/: sample_users.csv
src/viber/: __init__.py  config.py  lakehouse.py
tests/: test_config.py  test_lakehouse.py
